# polymnia

./: CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  colcnv.cpp  config.h.in  configure  configure.ac  configure.in  dibin.cpp  dibio.h  dibout.cpp  hex.h  ibuf-imp_.h  ibuf.cpp  ibuf.h  jpegin.cpp  jpegio.cpp  jpegio.h  jpegout.cpp  magnify.cpp  pictcvt.h  pictio.h  picture.cpp  picture.h  pngin.cpp  pngio.h  pngout.cpp  reduce.cpp  resize.cpp  resizer.h  resizer_loadsave.cpp  resizer_main.cpp  rgb.h  (+6 more)
